Rename `Error` schema of OpenAPI spec to `ApiError`
