# src/main/java/com/github/dashframe/rest/api/WidgetsApi.java
@@ -5,12 +5,10 @@
  */
 package com.github.dashframe.rest.api;
 
-import com.github.dashframe.models.json.CreateToken400Response;
-import com.github.dashframe.models.json.CreateToken401Response;
-import com.github.dashframe.models.json.CreateUser404Response;
 import com.github.dashframe.models.json.CreateWidgetRequest;
 import com.github.dashframe.models.json.UpdateWidgetRequest;
 import com.github.dashframe.models.json.WidgetInstance;
+import com.github.dashframe.models.json.WrappedApiError;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
@@ -27,7 +25,7 @@ import org.springframework.web.multipart.MultipartFile;
 
 @Generated(
     value = "org.openapitools.codegen.languages.SpringCodegen",
-    date = "2022-11-08T16:03:51.937911500+01:00[Europe/Paris]"
+    date = "2022-11-09T11:51:12.913786908+01:00[Europe/Paris]"
 )
 @Validated
 public interface WidgetsApi {
@@ -40,9 +38,7 @@ public interface WidgetsApi {
      *
      * @param createWidgetRequest  (optional)
      * @return Widget was created successfully (status code 201)
-     *         or Returned if the requested was malformed (status code 400)
-     *         or The user is not logged in (status code 401)
-     *         or Returned if the requested resource doesn&#39;t exist, or the user does not have access (status code 404)
+     *         or Error HTTP response.  Status codes: - 400: Returned if the requested was malformed - 401: The user is not logged in - 404: Returned if the requested resource doesn&#39;t exist, or the user does not have access   (status code 4XX)
      */
     @RequestMapping(
         method = RequestMethod.POST,
@@ -72,8 +68,7 @@ public interface WidgetsApi {
      *
      * @param widgetId The ID of a widget (required)
      * @return The widget was deleted successfully (status code 204)
-     *         or The user is not logged in (status code 401)
-     *         or Returned if the requested resource doesn&#39;t exist, or the user does not have access (status code 404)
+     *         or Error HTTP response.  Status codes: - 400: Returned if the requested was malformed - 401: The user is not logged in - 404: Returned if the requested resource doesn&#39;t exist, or the user does not have access   (status code 4XX)
      */
     @RequestMapping(method = RequestMethod.DELETE, value = "/widgets/{widgetId}", produces = { "application/json" })
     default ResponseEntity<Void> deleteWidget(@Min(0) @PathVariable("widgetId") Integer widgetId) {
@@ -85,8 +80,7 @@ public interface WidgetsApi {
      *
      * @param userId The ID of an user, assumed to be the current user if not specified (optional)
      * @return Board was cleared successfully (status code 204)
-     *         or The user is not logged in (status code 401)
-     *         or Returned if the requested resource doesn&#39;t exist, or the user does not have access (status code 404)
+     *         or Error HTTP response.  Status codes: - 400: Returned if the requested was malformed - 401: The user is not logged in - 404: Returned if the requested resource doesn&#39;t exist, or the user does not have access   (status code 4XX)
      */
     @RequestMapping(method = RequestMethod.DELETE, value = "/widgets", produces = { "application/json" })
     default ResponseEntity<Void> deleteWidgets(
@@ -100,8 +94,7 @@ public interface WidgetsApi {
      *
      * @param widgetId The ID of a widget (required)
      * @return Expected response to a valid request (status code 200)
-     *         or The user is not logged in (status code 401)
-     *         or Returned if the requested resource doesn&#39;t exist, or the user does not have access (status code 404)
+     *         or Error HTTP response.  Status codes: - 400: Returned if the requested was malformed - 401: The user is not logged in - 404: Returned if the requested resource doesn&#39;t exist, or the user does not have access   (status code 4XX)
      */
     @RequestMapping(method = RequestMethod.GET, value = "/widgets/{widgetId}", produces = { "application/json" })
     default ResponseEntity<WidgetInstance> getWidget(@Min(0) @PathVariable("widgetId") Integer widgetId) {
@@ -124,8 +117,7 @@ public interface WidgetsApi {
      *
      * @param userId The ID of an user, assumed to be the current user if not specified (optional)
      * @return Expected response to a valid request (status code 200)
-     *         or The user is not logged in (status code 401)
-     *         or Returned if the requested resource doesn&#39;t exist, or the user does not have access (status code 404)
+     *         or Error HTTP response.  Status codes: - 400: Returned if the requested was malformed - 401: The user is not logged in - 404: Returned if the requested resource doesn&#39;t exist, or the user does not have access   (status code 4XX)
      */
     @RequestMapping(method = RequestMethod.GET, value = "/widgets", produces = { "application/json" })
     default ResponseEntity<List<WidgetInstance>> listWidgets(
@@ -151,9 +143,7 @@ public interface WidgetsApi {
      * @param widgetId The ID of a widget (required)
      * @param updateWidgetRequest  (optional)
      * @return The widget was updated successfully (status code 204)
-     *         or Returned if the requested was malformed (status code 400)
-     *         or The user is not logged in (status code 401)
-     *         or Returned if the requested resource doesn&#39;t exist, or the user does not have access (status code 404)
+     *         or Error HTTP response.  Status codes: - 400: Returned if the requested was malformed - 401: The user is not logged in - 404: Returned if the requested resource doesn&#39;t exist, or the user does not have access   (status code 4XX)
      */
     @RequestMapping(
         method = RequestMethod.PATCH,
